# AceMatch

./: .gitignore  Championnat.h  Client.h  Client.hpp  DataManager.h  DataManager.hpp  GestionClient.h  GestionClients.cpp  GestionClients.h  GestionClients.hpp  GestionJoueurs.h  GestionJoueurs.hpp  GestionParties.h  GestionPlaces.hpp  GestionScores.hpp  GestionTickets.h  GestionTickets.hpp  Joueur.h  Joueur.hpp  Match.h  Match.hpp  MatchResult.h  MatchResult.hpp  MatchSchedule.h  MatchSchedule.hpp  Paiements.hpp  Partie.h  Partie.hpp  Place.h  Place.hpp  PlanificationParties.h  PlanificationParties.hpp  PlanificationPlaces.h  PlanificationPlaces.hpp  README.md  Reservation.h  Reservation.hpp  Score.h  Score.hpp  Scoreboard.cpp  (+46 more)
app/: CMakeLists.txt  ScoreboardUI.cpp  clientsui.cpp  clientsui.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  match.cpp  match.h  match.ui  matchresult.cpp  matchresult.h  matchresult.ui  matchschedule.cpp  matchschedule.h  matchschedule.ui  matchui.cpp  matchui.h  matchui.ui  placesui.cpp  placesui.h  placesui.ui  player.cpp  player.h  playerbox.cpp  playerbox.h  playerbox.ui  playerui.cpp  reservationsui.cpp  reservationsui.h  scoreboard.cpp  scoreboard.h  scoreboard.ui  scoreboardmatchdetailsui.cpp  scoreboardmatchdetailsui.h  scoreui.cpp  scoreui.h  terrainsui.cpp  terrainsui.h  (+4 more)
app/data/: Championnat.cpp  Championnat.h  Client.cpp  Client.h  Court.h  Joueur.cpp  Joueur.h  Match.h  MatchBase.cpp  MatchBase.h  Paiement.h  Paiements.h  Payment.h  Place.h  Player.h  Reservation.cpp  Reservation.h  Score.cpp  Score.h  Seat.h  Tennis.cpp  TennisEvent.h  Terrain.cpp  Terrain.h  Ticket.cpp  Ticket.h  TournamentRanking.cpp
app/data/mgmt/: ClientManager.cpp  ClientManager.h  CourtManager.cpp  CourtManager.h  Errors.h  GestionClients.cpp  GestionClients.h  GestionJoueurs.cpp  GestionJoueurs.h  GestionMatch.cpp  GestionMatch.h  GestionPaiements.cpp  GestionPaiements.h  GestionParties.cpp  GestionPlaces.cpp  GestionPlaces.h  GestionReservations.cpp  GestionReservations.h  GestionScores.cpp  GestionScores.h  GestionSeats.cpp  GestionSeats.h  GestionTerrains.cpp  GestionTerrains.h  GestionTickets.cpp  GestionTickets.h  MatchManager.cpp  MatchManager.h  PaymentManager.cpp  PaymentManager.h  PlanificationParties.cpp  PlanificationParties.h  PlayerManager.cpp  PlayerManager.h  ReservationManager.cpp  ReservationManager.h  ScoreManager.cpp  ScoreManager.h  SeatManager.cpp  SeatManager.h  (+4 more)
app/styles/: styles.qss
app/ui/: clientsui.ui  courtsui.ui  mainwindow.ui  matchui.ui  placesui.ui  playerbox.ui  playerprofileui.ui  playerui.ui  reservationsui.ui  scoreboardmatchdetailsui.ui  scoreboardui.ui  scoreui.ui  seatsui.ui  settingsdialog.ui  terrainsui.ui  ticketsui.ui
app/ui/headers/: ScoreboardUI.h  SettingsDialog.h  clientsui.h  courtsui.h  mainwindow.h  matchui.h  placesui.h  playerbox.h  playerprofileui.h  playerui.h  reservationsui.h  scoreboardmatchdetailsui.h  scoreui.h  seatsui.h  terrainsui.h  ticketsui.h
app/ui/sources/: SettingsDialog.cpp  clientsui.cpp  courtsui.cpp  matchui.cpp  placesui.cpp  playerbox.cpp  playerprofileui.cpp  playerui.cpp  reservationsui.cpp  scoreboardmatchdetailsui.cpp  scoreui.cpp  seatsui.cpp  terrainsui.cpp  ticketsui.cpp
